[package]
name = "youtube_downloader_cli"
version = "0.1.4"
edition = "2021"
authors = ["malakai gunderson <discord: !kaifungaming#2947>"]
description = "A cli YouTube downloader develop in rust"
readme = "README.md"
repository = "https://github.com/Kaifungamedev/youtube_downloader_rust/"
license = "GPL-3.0"
keywords = ["youtube", "youtube-downloader"]
categories = ["multimedia"]
include = ["LICENSE*", "src", "Cargo.toml", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube ="0.6.0"
futures = "0.3.25"
tokio = {version = "1.21.2",  features = ["full"] }
ytextract = "0.11.0"