[package]
name = "youtube_downloader_cli"
version = "1.1"
edition = "2021"
authors = ["malakai gunderson"]
description = "A cli YouTube downloader develop in rust"
readme = "README.md"
repository = "https://github.com/Kaifungamedev/youtube_downloader_rust/"
license = "GPL-3.0"
keywords = ["youtube", "youtube-downloader"]
categories = ["multimedia"]
include = ["LICENSE*", "src", "Cargo.toml", "README.md","icon.ico"]
# build = "build.rs"

[dependencies]
rustube ="0.6.0"
futures = "0.3.25"
ytextract = "0.11.0"
tokio = {version = "1.21.2",  features = ["full"] }
reqwest = "0.11.12"
[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"